[tool.poetry]
name = "ml-project-github"
version = "0.1.0"
description = ""
authors = ["CodingJelle <jellevbarneveld@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
numpy = "^1.26.2"
torch = "^2.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
